[package]
name = "persistent-hot"
version = "0.1.0"
edition = "2021"
description = "Persistent Height Optimized Trie (HOT) implementation"
license = "MIT"

[dependencies]
# 序列化
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Hash 函数
blake3 = "1.5"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[dev-dependencies]
rand = "0.8"

[features]
default = []
