[package]
name = "persistent-hot"
version = "0.1.0"
edition = "2021"
description = "Persistent Height Optimized Trie (HOT) implementation"
license = "MIT"

[dependencies]
# 序列化
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Hash 函数
blake3 = "=1.4.1"
tiny-keccak = { version = "2.0", features = ["keccak"] }

# KV 存储接口（可选，用于 KvNodeStore）
kvdb = { workspace = true, optional = true }

# AuthDB trait（可选，用于 benchmark 集成）
authdb-trait = { path = "../authdb-trait", optional = true }

[dev-dependencies]
rand = "0.8"
kvdb-memorydb = { workspace = true }

[features]
default = []
kvdb-backend = ["kvdb"]
authdb = ["authdb-trait"]
